[package]
name = "hakelig"
version = "0.0.1"
authors = ["Andreas Rottmann <mail@r0tty.org>"]
edition = "2018"

[dependencies]
failure = "0.1"
futures = "0.1"
lazy_static = "1.2"
log = "0.4"
env_logger = "0.6"
structopt = "0.2"
tokio = "0.1"
url = "1.7"
html5ever = "0.22"
tendril = "0.4.1"
regex = "1.1"
#reqwest = "0.9.11"
