[package]
name = "hakelig"
version = "0.0.1"
authors = ["Andreas Rottmann <mail@r0tty.org>"]
license = "GPL-2.0-or-later"
repository = "https://r0tty.org/git/rust/hakelig"
keywords = ["link", "checker", "html"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
failure = "0.1"
futures-preview = "0.3.0-alpha"
once_cell = "1.2"
log = "0.4"
env_logger = "0.7"
structopt = "0.3"
tokio = "0.2.0-alpha"
url = "2.1"
html5ever = "0.25"
tendril = "0.4.1"
regex = "1.1"
reqwest = "0.10.0-alpha"
