[package]
name = "hakelig"
version = "0.0.1"
authors = ["Andreas Rottmann <mail@r0tty.org>"]
license = "GPL-2.0-or-later"
repository = "https://r0tty.org/git/rust/hakelig"
keywords = ["link", "checker", "html"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
anyhow = "1.0.37"
async-channel = "1.5.1"
async-stream = "0.3.0"
crossterm = "0.26.1"
env_logger = "0.10.0"
futures = "0.3.8"
html5ever = "0.26.0"
log = "0.4.11"
mime = "0.3.16"
num_cpus = "1.13.0"
once_cell = "1.5.2"
regex = "1.4.2"
reqwest = "0.11.18"
structopt = "0.3.21"
tendril = "0.4.1"
tokio = { version = "1.0.1", features = ["full"] }
tokio-stream = "0.1.0"
url = "2.2.0"
